recipes/cad2/task2/baseline_validation/slurm-651120.out
Traceback (most recent call last):
  File "enhance.py", line 28, in <module>
    from recipes.cad2.task2.ConvTasNet.local.tasnet import ConvTasNetStereo
  File "/mnt/scratch/sc22ol/Project/recipes/cad2/task2/ConvTasNet/local/__init__.py", line 7, in <module>
    from .tasnet import ConvTasNetStereo, overlap_and_add
  File "/mnt/scratch/sc22ol/Project/recipes/cad2/task2/ConvTasNet/local/tasnet.py", line 84
    """
    ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xd7 in position 163: invalid continuation byte
[2025-04-26 00:21:34,525][__main__][INFO] - Evaluating from enhanced_signals directory
[2025-04-26 00:21:34,574][__main__][INFO] - [001/203] Evaluating S62001 for listener L6201
[2025-04-26 00:22:06,691][__main__][INFO] - [002/203] Evaluating S62002 for listener L6239
[2025-04-26 00:22:07,638][clarity.utils.flac_encoder][ERROR] - File enhanced_signals/test/S62002_L6239_remix.flac not found.
Error executing job with overrides: []
Traceback (most recent call last):
  File "evaluate.py", line 248, in run_calculate_aq
    enhanced_signal, _ = read_flac_signal(
  File "/mnt/scratch/sc22ol/Project/clarity/utils/flac_encoder.py", line 254, in read_flac_signal
    signal, sample_rate = flac_encoder.decode(
  File "/mnt/scratch/sc22ol/Project/clarity/utils/flac_encoder.py", line 232, in decode
    raise FileNotFoundError(f"File {input_filename} not found.")
FileNotFoundError: File enhanced_signals/test/S62002_L6239_remix.flac not found.

Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.
Both scripts ran successfully!
